# nora

./: Cargo.toml  Makefile.toml  README.md
.obsidian/: workspace.json
examples/: run.rs  simple.rs  three.rs
nora_core/: Cargo.toml
nora_core/examples/: simple.rs  three.rs
nora_core/src/: lib.rs  utils.rs
nora_core/src/channel/: channel.rs  debug.rs  mod.rs  receiver.rs
nora_core/src/topology/: brain.rs
nora_core/src/topology/neuron/: axon.rs  dendrite.rs  mod.rs
notes/: Scratch.md
notes/.obsidian/: workspace.json
src/: axon.rs  brain.rs  camera.rs  dendrite.rs  junction.rs  lib.rs  main.rs  neuron.rs  state_manager.rs  widgets.rs
src/brain/: mod.rs
src/channel/: state.rs
src/communication/: mod.rs
src/glial/: mod.rs
src/junction/: mod.rs  num_junction.rs
src/neuron/: axon.rs  dendrite.rs  mod.rs  soma.rs
src/topology/: brain.rs  mod.rs
src/topology/junctions/: mod.rs  potential.rs
src/topology/neuron/: axon.rs  dendrite.rs  mod.rs  soma.rs
src/ui/: mod.rs
src/visual/: edge.rs  mod.rs  node.rs
