[package]
name = "nora"
version = "0.1.0"
edition = "2024"

[features]

[dependencies]
nora_core.workspace = true

[dev-dependencies]
pretty_assertions = "1.4.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"


[workspace]
resolver = "3"
members = ["nora_core"]


[workspace.dependencies]
nora_core = {path = "nora_core"}
