[package]
name = "nora_core"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
rand = "0.9"
rayon = "1.10"
uuid = { version = "1.10", features = ["rng", "serde", "v4"] }
fnv = "1.0.7"
burn = { version = "0.17.1", features = ["ndarray", "cuda", "wgpu"] }
trotcast = "0.4.0"


[dev-dependencies]
pretty_assertions = "1.4.1"
